--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Some title</title>
   <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
   <link rel="stylesheet" href="css/style.css" />
@@ -71,5 +72,8 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>© 2020 - 2021, directed by M.Murager &amp; NTRTD team, All rights reserved </p>
+    </footer>
 </body>
 </html>
