--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
     </div>
     <footer>
-        <p>© 2020 - 2021, directed by M.Murager &amp; NTRTD team, All rights reserved </p>
+        <p>© 2020 - 2021, directed by M.Murager &amp; NTRTD team, All rights reserved. </p>
     </footer>
 </body>
 </html>
